web_static/styles/6-filters.css
.filters {
    background-color: white;
    height: 70px;
    width: 100%;
    border: 1px solid #DDDDDD;
    border-radius: 4px;
    display: flex;
    align-items: center;
    justify-content: flex-start;
    position: relative;
}

.filters button {
    font-size: 18px;
    background-color: #FF5A5F;
    color: #FFFFFF;
    height: 48px;
    width: 20%;
    border: none;
    border-radius: 4px;
    margin-right: 30px;
    margin-left: 25%;
    padding: 0;
}

.filters button:hover {
    opacity: 90%;
}

.locations, .amenities {
    height: 100%;
    width: 25%;
}

.locations h3, .amenities h3 {
    font-weight: 600;
    margin: 18px 0px 0px 30px;
}

.locations h4, .amenities h4 {
    font-weight: 400;
    font-size: 14px;
    margin: 0px 0px 0px 30px;
}

.filters .locations {
    border-right: solid 1px #DDDDDD;
}

li {
    list-style: none;
}

.popover {
    display: none;
    z-index: 0;
    background-color: #FAFAFA;
    border: 1px solid #DDDDDD;
    border-radius: 0px 0px 4px 4px;
    margin-top: 16.8px;
    margin-bottom: 0px;
    padding: 30px;
}

.popover li h2{
    font-size: 16px;
}

.popover li ul li {
    margin-top: -10px;
    margin-bottom: 20px;
    margin-left: -23px;
}

.popover li {
    margin: 20px auto 20px auto;
}

.locations, .amenities {
    height: 100%;
    width: 25%;
}

.locations:hover>.popover {
    display: block;
}

.amenities:hover>.popover {
    display: block;
}

